# aws-hubspot-analytics

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
docs/: incremental_sync.md
lambda/: Dockerfile  activities.py  app.py  companies.py  contacts.py  deals.py  deals_raw.py  hubspot_client.py  normalization.py  owners.py  owners_dim.py  pipelines_dim.py  utils.py
lambda/pythonsrc/: app.py  hubspot_client.py
lambda/pythonsrc/functions/: activities.py  companies.py  contacts.py  deals.py  owners.py  pipelines.py  pipelines_dim.py
lambda/pythonsrc/helpers/: normalization.py  storage.py  (+2 more)
lib/: hubspot-analytics-stack.ts
sql/: create_view_activity_volume_by_owner_type_daily.sql  create_view_activity_volume_by_owner_type_date_range.sql  create_view_activity_volume_by_owner_type_last3weeks.sql  create_view_activity_volume_by_owner_type_weekly.sql  create_view_deal_cohort_closing_rates.sql  create_view_deal_cohort_closing_rates_by_owner.sql  create_view_deal_cohort_closing_rates_by_owner_transposed.sql  create_view_deal_cohort_closing_rates_transposed.sql  create_view_deal_kpis_monthly.sql  create_view_deal_kpis_monthly_transposed.sql  create_view_deal_kpis_monthly_v2.sql  create_view_deal_kpis_weekly_last3.sql  create_view_deal_kpis_weekly_last3_by_owner.sql  create_view_deal_kpis_weekly_last3_transposed.sql  create_view_deal_stage_durations_per_deal.sql  create_view_deals_latest.sql  create_view_deals_latest_clean.sql  create_view_deals_with_company.sql
test/: hubspot-analytics.test.ts
(+2 files in other folders)
