[project]
name = "hubspot-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.12.1",
    "boto3>=1.40.18",
    "boto3-stubs==1.40.19",
    "botocore>=1.40.18",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.0.250703",
]
